--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
         border-radius: 16px;
         box-shadow: 0 6px 15px rgba(0,0,0,0.15);
       }
+      .video-box iframe {
+        width: 100%;
+        height: 400px;
+        border-radius: 16px;
+      }
+
+    
     .menu {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -266,4 +273,5 @@
 
 </body>
 </html>
+
 
