--- a/index.html
+++ b/index.html
@@ -209,15 +209,14 @@
       <button class="nav next">❯</button>
     </div>
   </section>
-  <section>
-  <h2>🎥 Video Geprek</h2>
+ <section>
+  <h2>🎥 Ayam Geprek Juara</h2>
 
   <div class="video-box">
-    <iframe
-      src="https://www.youtube.com/embed/ID_VIDEO"
-      frameborder="0"
-      allowfullscreen>
-    </iframe>
+    <video controls muted playsinline>
+      <source src="videos/20251230040102.mp4" type="video/mp4">
+      Browser tidak mendukung video.
+    </video>
   </div>
 </section>
 
@@ -273,5 +272,6 @@
 
 </body>
 </html>
+
 
 
