--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   <h2>🎥 Ayam Geprek Juara</h2>
 
   <div class="video-box">
-    <video controls muted playsinline autoplay loop>
+     <video muted autoplay loop playsinline>
       <source src="videos/20251230040102.mp4" type="video/mp4">
       Browser tidak mendukung video.
     </video>
@@ -272,6 +272,7 @@
 
 </body>
 </html>
+
 
 
 
